--- a/ui/form.ui
+++ b/ui/form.ui
@@ -58,6 +58,215 @@
     <property name="verticalSpacing">
      <number>9</number>
     </property>
+    <item row="1" column="1">
+     <widget class="QGroupBox" name="QGroupBox_1">
+      <property name="minimumSize">
+       <size>
+        <width>620</width>
+        <height>326</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>-1</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QGroupBox#QGroupBox_1 {
+    background-color:  #222831;
+    border: 2px solid gray;
+	 border-color: #00ADB5;
+    border-radius: 8px;
+    margin-top: 1ex; /* leave space at the top for the title */
+	 font-size: 16px;
+}
+
+QGroupBox::title#QGroupBox_1 {
+    color:  white;
+    subcontrol-origin: margin;
+	left: 15px;
+    padding: 0px 5px 0px 5px;
+}</string>
+      </property>
+      <property name="title">
+       <string>Logs</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <property name="leftMargin">
+        <number>16</number>
+       </property>
+       <property name="topMargin">
+        <number>16</number>
+       </property>
+       <property name="rightMargin">
+        <number>16</number>
+       </property>
+       <property name="bottomMargin">
+        <number>16</number>
+       </property>
+       <item row="0" column="0">
+        <widget class="QTextBrowser" name="QTextBrowser_Logs">
+         <property name="styleSheet">
+          <string notr="true">QTextBrowser#QTextBrowser_Logs {
+	color:#EEEEEE;
+}</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QGroupBox" name="QGroupBox_2">
+      <property name="minimumSize">
+       <size>
+        <width>620</width>
+        <height>326</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>-1</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QGroupBox#QGroupBox_2 {
+    background-color:  #222831;
+    border: 2px solid gray;
+	 border-color: #00ADB5;
+    border-radius: 8px;
+    margin-top: 1ex; /* leave space at the top for the title */
+	font-size: 16px;
+}
+
+QGroupBox::title#QGroupBox_2 {
+    color:  white;
+    subcontrol-origin: margin;
+	left: 15px;
+    padding: 0px 5px 0px 5px;
+}</string>
+      </property>
+      <property name="title">
+       <string>Utilities and settings</string>
+      </property>
+      <widget class="QFrame" name="frame">
+       <property name="geometry">
+        <rect>
+         <x>420</x>
+         <y>230</y>
+         <width>181</width>
+         <height>81</height>
+        </rect>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Panel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="0">
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <property name="spacing">
+           <number>8</number>
+          </property>
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <widget class="QPushButton" name="QPushButton_Save_Gesture">
+              <property name="font">
+               <font>
+                <pointsize>11</pointsize>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">QPushButton#QPushButton_Save_Gesture {
+	color:#EEEEEE;
+}</string>
+              </property>
+              <property name="text">
+               <string>Save gesture</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QSpinBox" name="QSpinBox_Gesture_Label">
+              <property name="styleSheet">
+               <string notr="true">QSpinBox#QSpinBox_Gesture_Label {
+	color:#EEEEEE;
+}</string>
+              </property>
+              <property name="maximum">
+               <number>9</number>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <widget class="QPushButton" name="QPushButton_Clear_All_Gestures">
+            <property name="font">
+             <font>
+              <pointsize>11</pointsize>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">QPushButton#QPushButton_Clear_All_Gestures{
+	color:#EEEEEE;
+}</string>
+            </property>
+            <property name="text">
+             <string>Clear all gestures</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QGroupBox" name="QGroupBox_3">
+      <property name="minimumSize">
+       <size>
+        <width>620</width>
+        <height>326</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>-1</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QGroupBox#QGroupBox_3 {
+    background-color:  #222831;
+    border: 2px solid gray;
+	 border-color: #00ADB5;
+    border-radius: 8px;
+    margin-top: 1ex; /* leave space at the top for the title */
+	font-size: 16px;
+}
+
+QGroupBox::title#QGroupBox_3 {
+    color:  white;
+    subcontrol-origin: margin;
+	left: 15px;
+    padding: 0px 5px 0px 5px;
+}</string>
+      </property>
+      <property name="title">
+       <string>Controls</string>
+      </property>
+     </widget>
+    </item>
     <item row="0" column="0">
      <widget class="QGroupBox" name="QGroupBox_Camera_Feed">
       <property name="sizePolicy">
@@ -66,11 +275,23 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>620</width>
+        <height>326</height>
+       </size>
+      </property>
       <property name="maximumSize">
        <size>
         <width>620</width>
         <height>16777215</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>-1</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QGroupBox#QGroupBox_Camera_Feed {
@@ -118,78 +339,6 @@ QGroupBox::title#QGroupBox_Camera_Feed {
         </widget>
        </item>
       </layout>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QGroupBox" name="QGroupBox_2">
-      <property name="styleSheet">
-       <string notr="true">QGroupBox#QGroupBox_2 {
-    background-color:  #222831;
-    border: 2px solid gray;
-	 border-color: #00ADB5;
-    border-radius: 8px;
-    margin-top: 1ex; /* leave space at the top for the title */
-	font-size: 16px;
-}
-
-QGroupBox::title#QGroupBox_2 {
-    color:  white;
-    subcontrol-origin: margin;
-	left: 15px;
-    padding: 0px 5px 0px 5px;
-}</string>
-      </property>
-      <property name="title">
-       <string>Settings</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QGroupBox" name="QGroupBox_3">
-      <property name="styleSheet">
-       <string notr="true">QGroupBox#QGroupBox_3 {
-    background-color:  #222831;
-    border: 2px solid gray;
-	 border-color: #00ADB5;
-    border-radius: 8px;
-    margin-top: 1ex; /* leave space at the top for the title */
-	font-size: 16px;
-}
-
-QGroupBox::title#QGroupBox_3 {
-    color:  white;
-    subcontrol-origin: margin;
-	left: 15px;
-    padding: 0px 5px 0px 5px;
-}</string>
-      </property>
-      <property name="title">
-       <string>Controls</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QGroupBox" name="QGroupBox_1">
-      <property name="styleSheet">
-       <string notr="true">QGroupBox#QGroupBox_1 {
-    background-color:  #222831;
-    border: 2px solid gray;
-	 border-color: #00ADB5;
-    border-radius: 8px;
-    margin-top: 1ex; /* leave space at the top for the title */
-	font-size: 16px;
-}
-
-QGroupBox::title#QGroupBox_1 {
-    color:  white;
-    subcontrol-origin: margin;
-	left: 15px;
-    padding: 0px 5px 0px 5px;
-}</string>
-      </property>
-      <property name="title">
-       <string>Logs</string>
-      </property>
      </widget>
     </item>
    </layout>
