--- a/ui/form.ui
+++ b/ui/form.ui
@@ -151,81 +151,125 @@ QGroupBox::title#QGroupBox_2 {
       <property name="title">
        <string>Utilities and settings</string>
       </property>
-      <widget class="QFrame" name="frame">
+      <widget class="QGroupBox" name="QGroupBox_Data_Collector">
        <property name="geometry">
         <rect>
-         <x>420</x>
-         <y>230</y>
-         <width>181</width>
-         <height>81</height>
+         <x>410</x>
+         <y>190</y>
+         <width>191</width>
+         <height>121</height>
         </rect>
        </property>
-       <property name="frameShape">
-        <enum>QFrame::Panel</enum>
+       <property name="styleSheet">
+        <string notr="true">QGroupBox#QGroupBox_Data_Collector {
+    background-color:  #222831;
+    border: 2px solid gray;
+	 border-color: #00ADB5;
+    border-radius: 8px;
+    margin-top: 1ex; /* leave space at the top for the title */
+	font-size: 14px;
+}
+
+QGroupBox::title#QGroupBox_Data_Collector  {
+    color:  white;
+    subcontrol-origin: margin;
+	left: 15px;
+    padding: 0px 5px 0px 5px;
+}</string>
        </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
+       <property name="title">
+        <string>Data Collector</string>
        </property>
-       <layout class="QGridLayout" name="gridLayout_3">
+       <layout class="QGridLayout" name="gridLayout_5">
+        <property name="leftMargin">
+         <number>12</number>
+        </property>
+        <property name="topMargin">
+         <number>12</number>
+        </property>
+        <property name="rightMargin">
+         <number>12</number>
+        </property>
+        <property name="bottomMargin">
+         <number>12</number>
+        </property>
         <item row="0" column="0">
-         <layout class="QVBoxLayout" name="verticalLayout">
-          <property name="spacing">
-           <number>8</number>
+         <widget class="QFrame" name="QFrame_Data_Collector">
+          <property name="styleSheet">
+           <string notr="true">QFrame#QFrame_Data_Collector {
+    border-radius: 8px;
+	background-color: #393E46;
+}</string>
           </property>
-          <property name="leftMargin">
-           <number>0</number>
+          <property name="frameShape">
+           <enum>QFrame::Panel</enum>
           </property>
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout">
-            <item>
-             <widget class="QPushButton" name="QPushButton_Save_Gesture">
-              <property name="font">
-               <font>
-                <pointsize>11</pointsize>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">QPushButton#QPushButton_Save_Gesture {
+          <property name="frameShadow">
+           <enum>QFrame::Raised</enum>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_3">
+           <item row="0" column="0">
+            <layout class="QVBoxLayout" name="verticalLayout">
+             <property name="spacing">
+              <number>8</number>
+             </property>
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout">
+               <item>
+                <widget class="QPushButton" name="QPushButton_Save_Gesture">
+                 <property name="font">
+                  <font>
+                   <pointsize>11</pointsize>
+                  </font>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">QPushButton#QPushButton_Save_Gesture {
 	color:#EEEEEE;
 }</string>
-              </property>
-              <property name="text">
-               <string>Save gesture</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QSpinBox" name="QSpinBox_Gesture_Label">
-              <property name="styleSheet">
-               <string notr="true">QSpinBox#QSpinBox_Gesture_Label {
+                 </property>
+                 <property name="text">
+                  <string>Save gesture</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QSpinBox" name="QSpinBox_Gesture_Label">
+                 <property name="styleSheet">
+                  <string notr="true">QSpinBox#QSpinBox_Gesture_Label {
 	color:#EEEEEE;
 }</string>
-              </property>
-              <property name="maximum">
-               <number>9</number>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <widget class="QPushButton" name="QPushButton_Clear_All_Gestures">
-            <property name="font">
-             <font>
-              <pointsize>11</pointsize>
-             </font>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">QPushButton#QPushButton_Clear_All_Gestures{
+                 </property>
+                 <property name="maximum">
+                  <number>9</number>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <widget class="QPushButton" name="QPushButton_Clear_All_Gestures">
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">QPushButton#QPushButton_Clear_All_Gestures{
 	color:#EEEEEE;
 }</string>
-            </property>
-            <property name="text">
-             <string>Clear all gestures</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
+               </property>
+               <property name="text">
+                <string>Clear all gestures</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </widget>
         </item>
        </layout>
       </widget>
