--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -1,5 +1,10 @@
 <RCC>
     <qresource prefix="/images">
         <file>images/drone.png</file>
+        <file>images/wifi_0.png</file>
+        <file>images/wifi_1.png</file>
+        <file>images/wifi_2.png</file>
+        <file>images/wifi_3.png</file>
+        <file>images/wifi_4.png</file>
     </qresource>
 </RCC>
