--- a/ui/form.ui
+++ b/ui/form.ui
@@ -117,6 +117,116 @@ QGroupBox::title#QGroupBox_1 {
       </layout>
      </widget>
     </item>
+    <item row="1" column="0">
+     <widget class="QGroupBox" name="QGroupBox_3">
+      <property name="minimumSize">
+       <size>
+        <width>620</width>
+        <height>326</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>-1</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QGroupBox#QGroupBox_3 {
+    background-color:  #222831;
+    border: 2px solid gray;
+	 border-color: #00ADB5;
+    border-radius: 8px;
+    margin-top: 1ex; /* leave space at the top for the title */
+	font-size: 16px;
+}
+
+QGroupBox::title#QGroupBox_3 {
+    color:  white;
+    subcontrol-origin: margin;
+	left: 15px;
+    padding: 0px 5px 0px 5px;
+}</string>
+      </property>
+      <property name="title">
+       <string>Controls</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QGroupBox" name="QGroupBox_Camera_Feed">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>620</width>
+        <height>326</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>620</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>-1</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QGroupBox#QGroupBox_Camera_Feed {
+    background-color:  #222831;
+    border: 2px solid gray;
+	 border-color: #00ADB5;
+    border-radius: 8px;
+    margin-top: 1ex; /* leave space at the top for the title */
+	font-size: 16px;
+}
+
+QGroupBox::title#QGroupBox_Camera_Feed {
+    color:  white;
+    subcontrol-origin: margin;
+	left: 15px;
+    padding: 0px 5px 0px 5px;
+}</string>
+      </property>
+      <property name="title">
+       <string>Camera Feed</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_6">
+       <property name="leftMargin">
+        <number>12</number>
+       </property>
+       <property name="topMargin">
+        <number>12</number>
+       </property>
+       <property name="rightMargin">
+        <number>12</number>
+       </property>
+       <property name="bottomMargin">
+        <number>12</number>
+       </property>
+       <item row="1" column="0">
+        <widget class="QLabel" name="QLabel_Camera_Feed">
+         <property name="styleSheet">
+          <string notr="true">QLabel#QLabel_Camera_Feed{
+    border-radius: 8px;
+}</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item row="0" column="1">
      <widget class="QGroupBox" name="QGroupBox_2">
       <property name="minimumSize">
@@ -155,9 +265,9 @@ QGroupBox::title#QGroupBox_2 {
        <property name="geometry">
         <rect>
          <x>410</x>
-         <y>190</y>
+         <y>200</y>
          <width>191</width>
-         <height>121</height>
+         <height>111</height>
         </rect>
        </property>
        <property name="styleSheet">
@@ -273,116 +383,129 @@ QGroupBox::title#QGroupBox_Data_Collector  {
         </item>
        </layout>
       </widget>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QGroupBox" name="QGroupBox_3">
-      <property name="minimumSize">
-       <size>
-        <width>620</width>
-        <height>326</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>-1</pointsize>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QGroupBox#QGroupBox_3 {
+      <widget class="QGroupBox" name="QGroupBox_Drone_Connection">
+       <property name="geometry">
+        <rect>
+         <x>210</x>
+         <y>200</y>
+         <width>191</width>
+         <height>111</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QGroupBox#QGroupBox_Drone_Connection {
     background-color:  #222831;
     border: 2px solid gray;
 	 border-color: #00ADB5;
     border-radius: 8px;
     margin-top: 1ex; /* leave space at the top for the title */
-	font-size: 16px;
+	font-size: 14px;
 }
 
-QGroupBox::title#QGroupBox_3 {
+QGroupBox::title#QGroupBox_Drone_Connection   {
     color:  white;
     subcontrol-origin: margin;
 	left: 15px;
     padding: 0px 5px 0px 5px;
 }</string>
-      </property>
-      <property name="title">
-       <string>Controls</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QGroupBox" name="QGroupBox_Camera_Feed">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>620</width>
-        <height>326</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>620</width>
-        <height>16777215</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>-1</pointsize>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QGroupBox#QGroupBox_Camera_Feed {
-    background-color:  #222831;
-    border: 2px solid gray;
-	 border-color: #00ADB5;
+       </property>
+       <property name="title">
+        <string>Connection</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_7">
+        <property name="leftMargin">
+         <number>12</number>
+        </property>
+        <property name="topMargin">
+         <number>12</number>
+        </property>
+        <property name="rightMargin">
+         <number>12</number>
+        </property>
+        <property name="bottomMargin">
+         <number>12</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QFrame" name="QFrame_Data_Drone_Connection">
+          <property name="styleSheet">
+           <string notr="true">QFrame#QFrame_Data_Collector {
     border-radius: 8px;
-    margin-top: 1ex; /* leave space at the top for the title */
-	font-size: 16px;
-}
-
-QGroupBox::title#QGroupBox_Camera_Feed {
-    color:  white;
-    subcontrol-origin: margin;
-	left: 15px;
-    padding: 0px 5px 0px 5px;
+	background-color: #393E46;
 }</string>
-      </property>
-      <property name="title">
-       <string>Camera Feed</string>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_6">
-       <property name="leftMargin">
-        <number>12</number>
-       </property>
-       <property name="topMargin">
-        <number>12</number>
-       </property>
-       <property name="rightMargin">
-        <number>12</number>
-       </property>
-       <property name="bottomMargin">
-        <number>12</number>
-       </property>
-       <item row="1" column="0">
-        <widget class="QLabel" name="QLabel_Camera_Feed">
-         <property name="styleSheet">
-          <string notr="true">QLabel#QLabel_Camera_Feed{
-    border-radius: 8px;
+          </property>
+          <property name="frameShape">
+           <enum>QFrame::Panel</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Raised</enum>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_4">
+           <item row="0" column="1">
+            <layout class="QHBoxLayout" name="horizontalLayout_2">
+             <item>
+              <widget class="QPushButton" name="QPushButton_Connect">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>35</height>
+                </size>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>11</pointsize>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">QPushButton#QPushButton_Connect{
+	color:#EEEEEE;
 }</string>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-      </layout>
+               </property>
+               <property name="text">
+                <string>Connect</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="QLabel_WiFI">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="minimumSize">
+                <size>
+                 <width>35</width>
+                 <height>35</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>35</width>
+                 <height>35</height>
+                </size>
+               </property>
+               <property name="text">
+                <string/>
+               </property>
+               <property name="pixmap">
+                <pixmap resource="../resources/resources.qrc">:/images/images/wifi_0.png</pixmap>
+               </property>
+               <property name="scaledContents">
+                <bool>true</bool>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
