--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -6,5 +6,21 @@
         <file>images/wifi_2.png</file>
         <file>images/wifi_3.png</file>
         <file>images/wifi_4.png</file>
+        <file>images/backward.png</file>
+        <file>images/backward_clicked.png</file>
+        <file>images/down.png</file>
+        <file>images/down_clicked.png</file>
+        <file>images/forward.png</file>
+        <file>images/forward_clicked.png</file>
+        <file>images/left.png</file>
+        <file>images/left_clicked.png</file>
+        <file>images/right.png</file>
+        <file>images/right_clicked.png</file>
+        <file>images/rotate_left.png</file>
+        <file>images/rotate_left_clicked.png</file>
+        <file>images/rotate_right.png</file>
+        <file>images/rotate_right_clicked.png</file>
+        <file>images/up.png</file>
+        <file>images/up_clicked.png</file>
     </qresource>
 </RCC>
