--- a/ui/form.ui
+++ b/ui/form.ui
@@ -1078,7 +1078,7 @@ QGroupBox::title#QGroupBox_Temperature {
               <widget class="QLabel" name="QLabel_celcius">
                <property name="font">
                 <font>
-                 <pointsize>15</pointsize>
+                 <pointsize>11</pointsize>
                 </font>
                </property>
                <property name="styleSheet">
@@ -1087,7 +1087,7 @@ QGroupBox::title#QGroupBox_Temperature {
 }</string>
                </property>
                <property name="text">
-                <string>°</string>
+                <string>°C</string>
                </property>
               </widget>
              </item>
